# ros2-workshop

./: .gitignore  .gitmodules  README.md  docker-compose.yaml
.devcontainer/: Dockerfile  devcontainer.json
src/day01/minimal_publisher/: package.xml  setup.py
src/day01/minimal_publisher/minimal_publisher/: publisher_member_function.py
src/day01/minimal_subscriber/: package.xml  setup.py
src/day01/minimal_subscriber/minimal_subscriber/: subscriber_member_function.py
src/day01/radio_communication/: package.xml  setup.py
src/day01/radio_communication/radio_communication/: publisher_node.py  subscriber_node.py
src/day01/radio_communication_solutions/: setup.cfg  setup.py
src/day01/radio_communication_solutions/radio_communication_solutions/: get_now_playing_service_sol.py  radio_broadcaster_sol.py  radio_listener_sol.py
src/day01/radio_communication_solutions_interfaces/srv/: GetNowPlaying.srv
src/day02/my_robot_description/: CMakeLists.txt  package.xml
src/day02/my_robot_description/launch/: robot_display.launch.py
src/day02/my_robot_description/urdf/: my_robot.xarco
src/day02/radio_station_interfaces_sol/: CMakeLists.txt
src/day02/radio_station_interfaces_sol/action/: ChooseSong.action
src/day02/radio_station_sol/: package.xml  setup.py
src/day02/radio_station_sol/radio_station_sol/: client_node.py  server_node.py
src/day03/tf_demo/: package.xml  setup.cfg  setup.py
src/day03/tf_demo/launch/: demo.launch.py
src/day03/tf_demo/tf_demo/: dynamic_tf_pub.py  static_tf_pub.py
src/day04/wall_follower/: package.xml  setup.py
src/day04/wall_follower/wall_follower/: wall_follower.py
src/my_project_deps/: CMakeLists.txt  commands.txt  package.xml  ros_dependecies.txt  ros_dependencies.txt
src/radio_communication_solutions/: CMakeLists.txt  package.xml  setup.py
src/radio_communication_solutions/radio_communication_solutions/: minimal_service.py  radio_broadcaster_sol.py  radio_listener_sol.py
src/radio_communication_solutions_interfaces/: CMakeLists.txt  package.xml
src/radio_station_interfaces_sol/: package.xml
src/radio_station_sol/: setup.cfg  setup.py
src/solutions/day01/radio_communication_solutions/radio_communication_solutions/: get_now_playing_service_sol.py  radio_broadcaster_sol.py  radio_listener_sol.py
src/solutions/day02/radio_station/: package.xml  setup.cfg  setup.py
src/solutions/day02/radio_station/radio_station/: action_client_node.py  action_server_node.py  get_now_playing_client.py  get_now_playing_server.py
src/solutions/day02/radio_station_interfaces/: CMakeLists.txt  package.xml
src/solutions/day02/radio_station_interfaces/action/: ChooseSong.action
src/solutions/day02/radio_station_interfaces/srv/: GetNowPlaying.srv
src/solutions/day03/tf_demo/launch/: demo.launch.py
src/solutions/day03/tf_demo/rviz/: tf_view.rviz
src/solutions/day03/tf_demo/tf_demo/: static_tf_pub.py
