<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_project</name>
  <version>0.0.0</version>
  <description>TurtleBot3 project for simulation and visualization</description>

  <maintainer email="tom.birchler@hotmail.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>ament_lint_auto</build_depend>
  <build_depend>ament_lint_common</build_depend>

  <!-- Executable dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>gazebo-ros-pkgs</exec_depend>
  <exec_depend>gazebo-ros2-control</exec_depend>
  <exec_depend>turtlebot3-gazebo</exec_depend>
  <exec_depend>turtlebot3-teleop</exec_depend>
  <exec_depend>turtlebot3-simulator</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>slam-toolbox</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2-tools</exec_depend>

  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
